maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^ShortestPathMaze:2: error: expected start of definition
override def run() {
         ^ShortestPathMaze:12: error: expected class or object definition
def indicationBaggle(){
^ShortestPathMaze:24: error: expected class or object definition
def traceChemin(){
^ShortestPathMaze:40: error: expected class or object definition
def marquer(x:Int,y:Int){
^ShortestPathMaze:55: error: expected class or object definition
def aMurSud(x:Int,y:Int): Boolean ={
^ShortestPathMaze:63: error: expected class or object definition
def aMurEst(x:Int,y:Int): Boolean ={
^ShortestPathMaze:73: error: expected class or object definition
def trouveForce(){
^